syntax = "proto3";
package hypersignprotocol.hidnode.ssi;
option go_package = "github.com/hypersign-protocol/hid-node/x/ssi/types";

message Claim {
    string id = 1;
    string currentStatus = 2;
    string statusReason = 3;
}

message CredentialStatus {
    Claim claim = 1;
    string issuer = 2;
    string issuanceDate = 3;
    string expirationDate = 4;
    string credentialHash = 5;
}

message CredentialProof {
    string type = 1;
    string created = 2;
    string updated = 3;
    string verificationMethod = 4;
    string proofPurpose = 5;
    string proofValue = 6;
}

message Credential {
    Claim claim = 1;
    string issuer = 2;
    string issuanceDate = 3;
    string expirationDate = 4;
    string credentialHash = 5;
    CredentialProof proof = 6;
}