syntax = "proto3";
package hypersign.ssi.v1;

import "ssi/v1/proof.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/hypersign-protocol/hid-node/x/ssi/types";

message CredentialStatusDocument {
    repeated string context = 1 [json_name = "@context", (gogoproto.jsontag) = "@context"];
    string id = 2;
    bool revoked = 3;
    bool suspended = 4;
    string remarks = 5;
    string issuer = 6;
    string issuanceDate = 7;
    string credentialMerkleRootHash = 8;
}

message CredentialStatusState {
    CredentialStatusDocument credentialStatusDocument = 1;
    DocumentProof credentialStatusProof = 2;
}
