syntax = "proto3";
package hypersignprotocol.hidnode.ssi;

option go_package = "github.com/hypersign-protocol/hid-node/x/ssi/types";

import "ssi/v1/clientSpec.proto";

message Did {
  string id = 1;
  repeated string controller = 2;
  repeated string alsoKnownAs = 3;
  repeated VerificationMethod verificationMethod = 4;
  repeated string authentication = 5;
  repeated string assertionMethod = 6;
  repeated string keyAgreement = 7;
  repeated string capabilityInvocation = 8;
  repeated string capabilityDelegation = 9;
  repeated Service service = 10;
}

message Metadata {
  string created = 1;
  string updated = 2;
  bool deactivated = 3;
  string versionId = 4;
}

message VerificationMethod {
  string id = 1;
  string type = 2;
  string controller = 3;
  string publicKeyMultibase = 4; // If value is provided, `blockchainAccountId` must be empty
  string blockchainAccountId = 5; // If value is provided, `publicKeyMultibase` must be empty
}

message Service {
  string id = 1;
  string type = 2;
  string serviceEndpoint = 3;
}

message SignInfo {
  string verification_method_id = 1;
  string signature = 2;
  ClientSpec clientSpec = 3;
}

message DidDocumentState {
  Did didDocument = 1;
  Metadata didDocumentMetadata = 2;
}